Fixed suggestions in my previuos PR.